# darbandi-txrm-projection-exporter

./: .gitignore  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml  requirements.txt  txrm_read.py
docs/: USER_MANUAL.md
